alterando local da imagem do time

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
   </section><!-- Fim do Quem Somos -->
 
-  <section id="squad" style="background-image: url('time2.jpeg');background-size: 70%; height:570px; padding-top:100px;">               
+  <section id="squad" style="background-image: url('assets/img/time2.jpeg');background-size: 70%; height:570px; padding-top:100px;">               
     <div id="rectangle"></div>
     <div class="triangulo">
         <div class="textosquad">
