Adicionando vídeo ao html

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     </div>
   </section><!-- Fim do Quem Somos -->
 
+  <!--Sobre squad-->
   <section id="squad" style="background-image: url('assets/img/time2.jpeg');background-size: 70%; height:570px; padding-top:100px;">               
     <div id="rectangle"></div>
     <div class="triangulo">
@@ -121,8 +122,17 @@
                     a seguir nessa carreira responsável por inovar o planeta.</h4>
         </div> <!--textosquad-->
     </div> <!--triangulo-->
-</section> <!--squad-->
+  </section> <!--squad-->
 
+  <!--Vídeo teu Futuro-->
+  <section class="teufuturo">
+    <iframe src="https://drive.google.com/file/d/1_ngYeowgcLFerAHCq8rY_eDZbjnBfm37/preview" allow="autoplay"></iframe>
+    <div class="textoteufuturo">
+        <h1>O que o</h1>
+        <h1 id="roxo">#Teufuturo2021</h1>
+        <h1>nos ensinou?</h1>
+    </div>  
+  </section>
 
 </body>
 
