Estilizando parte teu futuro

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
   <section class="teufuturo">
     <iframe src="https://drive.google.com/file/d/1_ngYeowgcLFerAHCq8rY_eDZbjnBfm37/preview" allow="autoplay"></iframe>
     <div class="textoteufuturo">
-        <h1>O que o</h1>
-        <h1 id="roxo">#Teufuturo2021</h1>
-        <h1>nos ensinou?</h1>
+        <p>O que o</p>
+        <p id="roxo">#Teufuturo2021</p>
+        <p>nos ensinou?</p>
     </div>  
   </section>
 
