--- a/index.html
+++ b/index.html
@@ -110,6 +110,21 @@
     </div>
   </section><!-- Fim do Quem Somos -->
 
+  <!--Sobre squad-->
+ <section id="squad" style="background-image: url('assets/img/time2.jpeg');background-size: 70%; height:570px; padding-top:100px;">               
+  <div id="rectangle"></div>
+  <div class="triangulo">
+      <div class="textosquad">
+          <h1>Ten eighteen</h1><br><br>
+          <h5>Um squad, múltiplas soluções</h5><br>
+          <h3>Nosso squad foi unido pelo dia do nascimento  *curiosamente nascemos todos no mesmo dia (18/10).</h3>
+          <h4>Brincadeiras á parte, nos conhecemos por meio do programa #TeuFuturo, mas permanecemos juntos pela afinidade.
+                  O programa desenvolvido pela IMED e patrocinados por empresas, como a CWI, nos colocou a frente na TI, nos impulsionando 
+                  a seguir nessa carreira responsável por inovar o planeta.</h4>
+      </div> <!--textosquad-->
+  </div> <!--triangulo-->
+</section> <!--squad-->
+
   <!-- ======= Portfólio ======= -->
   <section id="portfolio" class="portfolio" data-aos="fade-up" data-aos-delay="600">
     <div class="container-fluid ">
