Adicionando vídeo sobre teu futuro

--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@
   </div> <!--triangulo-->
 </section> <!--squad-->
 
+<!--Vídeo teu Futuro-->
+<section class="teufuturo">
+  <iframe src="https://drive.google.com/file/d/1_ngYeowgcLFerAHCq8rY_eDZbjnBfm37/preview" allow="autoplay"></iframe>
+  <div class="textoteufuturo">
+      <p>O que o</p>
+      <p id="roxo">#Teufuturo2021</p>
+      <p>nos ensinou?</p>
+  </div>  
+</section>
+
   <!-- ======= Portfólio ======= -->
   <section id="portfolio" class="portfolio" data-aos="fade-up" data-aos-delay="600">
     <div class="container-fluid ">
