--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Teen Eighteen</title>
+    <title>Ten Eighteen</title>
 
     <!-- Fonte do Google -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -73,7 +73,7 @@
       <div class="conteudo col-lg-4 col-md-6">
         <a href="" target="_blank">
           <div class="conteudo-overlay"></div>
-          <img class="img-responsive" src="assets/img/Julianne.jpeg" style="width: 100%;">
+          <img class="img-responsive" src="assets/img/Julianne.jpeg" style="width: 100%">
           <div class="conteudo-details fadeIn-bottom">
             <h3>Julianne</h3>
             <p>Olá, tudo bem? Me chamo Julianne Martins, tenho 17 anos, estou no terceiro ano do Ensino Médio e sou bolsista do programa #TeuFuturo2021. Estou desenvolvendo meus conhecimentos técnicos de HTLM, CSS e JS. Espero um dia me tornar uma profissional da área. Posso dizer que, até agora, o #TeuFuturo está transformando a minha vida, não apenas na parte relacionada a conhecimentos técnicos, mas também como pessoa. As habilidades sociemocionais que desenvolvemos são de extremo valor para a vida, pretendo levar tudo isso comigo ao longo da minha trajetória.</p>
@@ -86,7 +86,7 @@
       <div class="conteudo col-lg-4 col-md-6">
         <a href="" target="_blank">
           <div class="conteudo-overlay"></div>
-          <img class=" img-responsive" style="width:100%" src="assets/img/Alisson.jpeg">
+          <img class="img-responsive" style="width:100%" src="assets/img/Alisson.jpeg">
           <div class="conteudo-details fadeIn-bottom">
             <h3>Alisson </h3>
             <p>Me Chamo Alisson Giovane da Silva, Sou estudante do Ensino Médio, e do Programa #TeuFuturo, Tenho 17 anos, tenho conhecimentos mais aprofundados em HTML,CSS, JS, e um conhecimento mais básico em C, ASP.NET, SQL e busco ingressar no mercado da programação.</p>
@@ -99,7 +99,7 @@
       <div class="conteudo">
         <a href="" target="_blank">
           <div class="conteudo-overlay"></div>
-          <img class=" img-responsive" style="width:100%" src="assets/img/Gabrielle.jpeg">
+          <img class="img-responsive" style="width:100%" src="assets/img/Gabrielle.jpeg">
           <div class="conteudo-details fadeIn-bottom">
             <h3>Gabrielle </h3>
             <p>Olá, eu sou a Gabrielle Kolzenti Arrache.
@@ -111,7 +111,7 @@
   </section><!-- Fim do Quem Somos -->
 
   <!--Sobre squad-->
- <section id="squad" style="background-image: url('assets/img/time2.jpeg');background-size: 70%; height:570px; padding-top:100px;">               
+ <section id="squad" style="background-image: url('assets/img/time2.jpeg');background-size: 70%; height:585px; padding-top:0px;">               
   <div id="rectangle"></div>
   <div class="triangulo">
       <div class="textosquad">
@@ -135,7 +135,7 @@
   </div>  
 </section>
 
-  <!-- ======= Portfólio ======= -->
+  <!-- ======= Portfólio ======= 
   <section id="portfolio" class="portfolio" data-aos="fade-up" data-aos-delay="600">
     <div class="container-fluid ">
       <div class="row col-lg-6 col-md-3 col-sm-3" data-aos="fade-up" data-aos-delay="600">
@@ -223,10 +223,10 @@
 
       </div>
       
-  </section ><!-- Fim do Portifólio -->
+  </section > <!--Fim do Portifólio --> 
 
 
-  <!-- Nossa visão -->
+  <!-- Nossa visão 
   <section id="nossa-visao" class="nossa-visao" data-aos="fade-up" data-aos-delay="700">
 
     <h1>NOSSA VISÃO</h1>
@@ -270,7 +270,7 @@
     </div>
 
   </section>
-
+-->
 
 </body>
 
