--- a/index.html
+++ b/index.html
@@ -271,7 +271,31 @@
 
   </section>
 -->
-
+<section id="contate">
+  <p id="titulo-form">Contate-nos</p>
+      <div id="formulario">
+      <form id="form-mensagem">
+          <div class="grupo">
+              <label for="nome">Nome</label>
+              <input id="nome" name="nome" type="text" placeholder="Seu nome" class="campo">
+          </div>
+          <div class="grupo">
+              <label for="email">E-mail</label>
+              <input id="email" name="email" type="text" placeholder="Seu e-mail" class="campo campo-medio">
+          </div>
+          <div class="grupo">
+              <label for="telefone">Telefone</label>
+              <input id="telefone" name="telefone" type="number" placeholder="Seu telefone" class="campo campo-medio">
+          </div>
+          <div class="grupo">
+              <label for="mensagem">Mensagem</label>
+              <input id="mensagem" type="text" placeholder="Mensagem" class="campo campo-medio" maxlength="5">
+          </div>
+          <button id="enviomensagem" class="botao bto-principal">Enviar</button>
+      </form>
+  </div>
+  </section><!--fim de contate-->
+  <script src="assets/js/sobresquad.js"></script>
 </body>
 
 </html>
