--- a/index.html
+++ b/index.html
@@ -293,6 +293,8 @@
           </div>
           <button id="enviomensagem" class="botao bto-principal">Enviar</button>
       </form>
+      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+      <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_kOcCeF.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
   </div>
   </section><!--fim de contate-->
   <script src="assets/js/sobresquad.js"></script>
