nav-bar com background cor ao scrollar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <h1 class="logo"><a href="index.html">Ten Eighteen</a></h1>
     
-    <nav id="navbar" class="navbar fixed-top">
+    <nav id="navbar" class="navbar fixed-top navbar-dark bg-dark fixed-top">
         <ul>
           <li><a class="nav-link scrollto active" href="quem-somos">Quem Somos?</a></li>
           <li><a class="nav-link scrollto" href="#quem-somos">Nosso Squad</a></li>
