Arrumando validação forms

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   </div>  
 </section>
 
-  <!-- ======= Portfólio ======= -->
+  <!-- ======= Portfólio ======= 
   <section id="portfolio" class="portfolio" data-aos="fade-up" data-aos-delay="600">
     <div class="container-fluid ">
       <div class="row col-lg-6 col-md-3 col-sm-3" data-aos="fade-up" data-aos-delay="600">
@@ -270,7 +270,7 @@
     </div>
 
   </section>
-
+-->
 <section id="contate">
   <p id="titulo-form">Contate-nos</p>
       <div id="formulario">
