--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
     <!-- Fonte do Google -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap" rel="stylesheet"> 
+
     <!-- Arquivos CSS -->
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -89,7 +92,7 @@
           <img class="img-responsive" style="width:100%" src="assets/img/Alisson.jpeg">
           <div class="conteudo-details fadeIn-bottom">
             <h3>Alisson </h3>
-            <p>Me Chamo Alisson Giovane da Silva, Sou estudante do Ensino Médio, e do Programa #TeuFuturo, Tenho 17 anos, tenho conhecimentos mais aprofundados em HTML,CSS, JS, e um conhecimento mais básico em C, ASP.NET, SQL e busco ingressar no mercado da programação.</p>
+            <p>Me Chamo Alisson Giovane da Silva, Sou estudante do Ensino Médio, e do Programa #TeuFuturo2021, Tenho 17 anos, tenho conhecimentos mais aprofundados em HTML,CSS, JS, e um conhecimento mais básico em C, ASP.NET, SQL e busco ingressar no mercado da programação.</p>
           </div>
         </a>
       </div>
@@ -103,7 +106,7 @@
           <div class="conteudo-details fadeIn-bottom">
             <h3>Gabrielle </h3>
             <p>Olá, eu sou a Gabrielle Kolzenti Arrache.
-              Atualmente curso o Ensino Médio e estudo programação, através do programa teu futuro 2021. Tenho habilidades técnicas em HTML, CSS e JS. Busco, através da tecnologia, impactar a vida das pessoas ao redor do mundo, tornando-o assim, um lugar melhor. Sempre me dedico a entregar o melhor que tenho a oferecer, procurando desenvolver também minhas habilidades socioemocionais.</p>
+              Atualmente curso o Ensino Médio e estudo programação, através do programa #TeuFuturo2021. Tenho habilidades técnicas em HTML, CSS e JS. Busco, através da tecnologia, impactar a vida das pessoas ao redor do mundo, tornando-o assim, um lugar melhor. Sempre me dedico a entregar o melhor que tenho a oferecer, procurando desenvolver também minhas habilidades socioemocionais.</p>
           </div>
         </a>
       </div>
@@ -303,6 +306,52 @@
     </section>
 
   <script src="assets/js/sobresquad.js"></script>
+
+<section id="contatos">
+    <div id="textoContatos">
+    <p>Se preferir, acompanhe nossa equipe ou fale conosco através dos contatos</p>
+    </div>
+    <div class="icones">
+      <p class="titulo">Gabrielle Kolzenti Arrache</p>
+        <ul>
+            <li class= "text"><img src="linkedin-3-xxl.png" class= "socialmidias">linkedin.com/in/gabrielle-arrache</li>
+            <li class= "text"><img src="whatsapp-xxl.png" class= "socialmidias">(51) 986391873</li>
+            <li class= "text"><img src="icons8-gmail-32.png" class= "socialmidias">gabriellekolzenti@gmail.com</li>
+            <li class= "text"><img src="github-11-xxl.png" class= "socialmidias">Gabrielle1810 </li>
+        </ul>
+      <p class="titulo">Julianne Emanuelle Martins</p>
+          <ul>
+            <li class= "text"><img src="linkedin-3-xxl.png" class= "socialmidias">linkedin.com/in/julianne-martins-14b079212</li>
+            <li class= "text"><img src="whatsapp-xxl.png" class= "socialmidias">(51)982987911</li>
+            <li class= "text"><img src="icons8-gmail-32.png" class= "socialmidias">julianne.emanuelle2015@gmail.com</li>
+            <li class= "text"><img src="github-11-xxl.png" class= "socialmidias">juliannemartins</li>
+          </ul>
+      <p class="titulo">Alisson Giovane Da Silva</p>
+        <ul>
+            <li class= "text"><img src="linkedin-3-xxl.png" class= "socialmidias">linkedin.com/in/alissogiovanetech</li>
+            <li class= "text"><img src="whatsapp-xxl.png" class= "socialmidias">(51)984584172</li>
+            <li class= "text"><img src="icons8-gmail-32.png" class= "socialmidias">giovanecontact@gmail.com</li>
+            <li class= "text"><img src="github-11-xxl.png" class= "socialmidias">ArioN666</li>
+        </ul>
+    </div>
+</section>
+
+<!----------------Rodapé--------------------->
+  <footer>
+    <div class= footer>
+        <h2>Ten Eighteen</h2>
+        <ul class="menu">
+            <li>Sobre</a></li>
+            <li>Termos</li>
+            <li>Privacidade</li>
+        </ul>
+    </div>
+    <div class= bottom>
+        <p> &copy; Copyright 2021 Ten Eighteen</p>
+    </div>
+  </footer>
+
+
 </body>
 
 </html>
