--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     
     <nav id="navbar" class="navbar fixed-top bg-dark fixed-top change color">
         <ul>
-          <li><a class="nav-link scrollto active" href="quem-somos">Quem Somos?</a></li>
+          <li><a class="nav-link scrollto active" href="#quem-somos">Quem Somos?</a></li>
           <li><a class="nav-link scrollto" href="#squad">Nosso Squad</a></li>
           <li><a class="nav-link scrollto" href="#teufuturo">#TeuFuturo</a></li>
           <li><a class="nav-link scrollto" href="#portfolio">Portfólio</a></li>
           <li><a class="nav-link scrollto" href="#nossa-visao">Nossa Visão</a></li>
           <li><a class="nav-link scrollto" href="#fale-conosco">Fale Conosco</a></li>
-          <li><a class="nav-link scrollto" href="#">Contato</a></li>
+          <li><a class="nav-link scrollto" href="#contatos">Contatos</a></li>
           </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -56,7 +56,7 @@
  <section id="WallPaper" class="d-flex align-items-center">
   <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
     <h1>Bem Vindo Ao Ten Eighteen</h1>
-    <a href="#about" class="btn-get-started scrollto">Veja Mais</a>
+    <a href="#quem-somos" class="btn-get-started scrollto">Veja Mais</a>
   </div>
 </section><!-- Fim do Wallpaper -->
 
@@ -69,7 +69,7 @@
   <script src="assets/js/main.js"></script>
 
   <!-- ======= Quem somos ======= -->
-  <section class="quem-somos" data-aos="fade-up" data-aos-delay="50">
+  <section class="quem-somos" id="quem-somos" data-aos="fade-up" data-aos-delay="50">
     <h1>QUEM SOMOS?</h1>
     <div class="container d-flex align-items-center justify-content-between" data-aos="fade-up" data-aos-delay="100">
 
